# NgImageViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md  heifdecoder.cpp  heifdecoder.h  imageformats.cpp  imageformats.h  imagewidgets.cpp  imagewidgets.h  main.cpp  mainwindow.cpp  mainwindow.h  rawdecoder.cpp  rawdecoder.h  resources.qrc
.github/workflows/: package.yml
docs/: heif-support.md  raw-support.md
resources/linux/: ngimageviewer.desktop
resources/macos/: Info.plist.in  NgImageViewer.icns
resources/windows/: NgImageViewer.rc
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
src/: fileassociationservice.cpp  fileassociationservice.h  imageformats.cpp  imagesequence.cpp  main.cpp  mainwindow.cpp  mainwindow.h  rawdecoder.cpp  rawdecoder.h
src/app/: mainwindow.cpp  mainwindow.h
src/image/: imageformats.cpp  imageformats.h  imageloader.cpp  imageloader.h  imageloadstate.cpp  imageloadstate.h  imagesequence.h  rawdecoder.cpp
src/platform/: fileassociationservice.cpp  fileassociationservice_linux.cpp  fileassociationservice_mac.cpp  fileassociationservice_p.h  fileassociationservice_unsupported.cpp  fileassociationservice_win.cpp
src/ui/: fileassociationdialog.cpp  fileassociationdialog.h  imageinfodialog.cpp  imageinfodialog.h  imagetoolbar.cpp  imagetoolbar.h  imageviewerwidget.cpp  imageviewerwidget.h  imagewidgets.cpp  imagewidgets.h
tests/: CMakeLists.txt  test_imageformats.cpp  test_imageloader.cpp  test_imageloadstate.cpp  test_imagesequence.cpp
